DSA-Star Patterns-1

--- a/NodeJS/Notes/23. NodeJS Environments.md
+++ b/NodeJS/Notes/23. NodeJS Environments.md
@@ -85,8 +85,6 @@ Feature flag to immediately stop a component in case of code failure or Disaster
 
 Usually feature fags ae used for a short period time ( until a new stable version of project is released) then remove these feature flags in order to  decrease the quantity of code.
 
-
-
 ## When To Use What
 
 ### **1. Application Logic (Business Layer)**
@@ -118,9 +116,6 @@ For example:
 That’s not an anti-pattern. You’re not changing app logic; you’re changing the developer’s **debugging experience**.  
 The production app still behaves the same—only slimmer, faster, and without the dev baggage.
 
-
-
-
 ## Toggling in a VITE Bundler
 
 So let’s talk **Vite** and keeping “dev-only” files (like your layout visualizer CSS) out of production bundles.
@@ -132,17 +127,54 @@ So let’s talk **Vite** and keeping “dev-only” files (like your layout visu
 Vite gives you `import.meta.env.MODE` and `import.meta.env.DEV` out of the box.  
 That’s your switch between *development* and *production*. Consider we want to control Layout Dev-needs 
 
+Vite exposes certain constants under the special `import.meta.env` object. *These constants are defined as global variables during dev and statically replaced at build time to make tree-shaking effective.*
+
 **Example:**
 
 ```js
-// main.js
 if (import.meta.env.DEV) {
-  import('./path_to-dev-needs');
+  // code inside here will be tree-shaken in production builds
+  console.log('Dev mode')
 }
 ```
 
-This ensures `dev-needs` is **only loaded during dev**.  
 When you build for production (`vite build`), Vite tree-shakes this import away.
+
+> By default, the dev server (`dev` command) runs in `development` mode and the `build` command runs in `production` mode.
+> 
+> This means when running `vite build`, it will load the env variables from `.env.production`
+
+## Built-in Constants
+
+Some built-in constants are available in all cases:
+
+- **`import.meta.env.MODE`**: {string} the [mode](https://vite.dev/guide/env-and-mode.html#modes) the app is running in.
+
+- **`import.meta.env.BASE_URL`**: {string} the base url the app is being served from. This is determined by the [`base` config option](https://vite.dev/config/shared-options#base).
+
+- **`import.meta.env.PROD`**: {boolean} whether the app is running in production (running the dev server with `NODE_ENV='production'` or running an app built with `NODE_ENV='production'`).
+
+- **`import.meta.env.DEV`**: {boolean} whether the app is running in development (always the opposite of `import.meta.env.PROD`)
+
+- **`import.meta.env.SSR`**: {boolean} whether the app is running in the [server](https://vite.dev/guide/ssr#conditional-logic).
+
+### ENV variables in Vite
+
+Vite exposes env variables under `import.meta.env` object as strings automatically.
+
+To prevent accidentally leaking env variables to the client, only variables prefixed with `VITE_` are exposed to your Vite-processed code. e.g. for the following env variables:
+
+```js
+VITE_SOME_KEY=123
+DB_PASSWORD=foobar
+```
+
+Only `VITE_SOME_KEY` will be exposed as `import.meta.env.VITE_SOME_KEY` to your client source code, but `DB_PASSWORD` will not.
+
+```js
+console.log(import.meta.env.VITE_SOME_KEY) // "123"
+console.log(import.meta.env.DB_PASSWORD) // undefined
+```
 
 ---
 
@@ -312,77 +344,6 @@ export const secureLogger = {
 if (isProd) secureLogger.invite();
 
 export default secureLogger;
-
 ```
 
 the above config even sanitizes the output such that no sensitive or critical info is revealed in production.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
