Setting up TypeScript
TypeScript Setup and Configuration
Type Inferencing
Type Annotation

--- a/NodeJS/Notes/13 Builing Industry Grade Projects/3. Creating Express Server.md
+++ b/NodeJS/Notes/13 Builing Industry Grade Projects/3. Creating Express Server.md
@@ -57,7 +57,7 @@ app.listen(5000, ()=>{
 
 ### Handling Incoming Requests
 
-use `app.use()` to handle the request, this taks a callback with parameters `(req, res)`.  The callback is known as **request handler**
+use `app.use()` to handle the request, this takes a callback with parameters `(req, res)`.  The callback is known as **request handler**
 
 To send a response, use `res.send(content)` inside the callback. 
 
