--- a/NodeJS/Notes/14. REST APIs.md
+++ b/NodeJS/Notes/14. REST APIs.md
@@ -59,7 +59,7 @@ RESTAPI should have Standardized and consistent way for clients to interact with
 
 > state is all the information about the current interaction between client and server
 
-This constraint says that the  necessary state to handle the request is contained within the request itself, whether as part of the URI, query-string parameters, body, or headers.
+This constraint says that the  **necessary state to handle the request is contained within the request itself, whether as part of the URI, query-string parameters, body, or headers.**
 
 The URI uniquely identifies the resource and the body contains the state (or state change) of that resource.
 
